# temp_allowlist_linode_fw

./: .gitignore  Dockerfile_example  Makefile  README.md  app.py  pyproject.toml  requirements.txt
scripts/: build_image.sh  deploy_image_to_host.sh  deploy_img_in_host.sh  startup_allowlist.sh
